--- a/MusicForThought/Base.lproj/Main.storyboard
+++ b/MusicForThought/Base.lproj/Main.storyboard
@@ -12,7 +12,7 @@
         <!--TagTVC-->
         <scene sceneID="n7o-ab-ZF5">
             <objects>
-                <tableViewController id="VrW-Qb-pbQ" customClass="TagTVC" customModule="MusicForThought" customModuleProvider="target" sceneMemberID="viewController">
+                <tableViewController storyboardIdentifier="TagTVC" id="VrW-Qb-pbQ" customClass="TagTVC" customModule="MusicForThought" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" id="pLL-3Q-xrI">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
