--- a/MusicForThought/Base.lproj/Main.storyboard
+++ b/MusicForThought/Base.lproj/Main.storyboard
@@ -41,7 +41,7 @@
         <!--Sub TagTVC-->
         <scene sceneID="dcG-M3-yQX">
             <objects>
-                <tableViewController id="Rhi-he-iTV" customClass="SubTagTVC" customModule="MusicForThought" customModuleProvider="target" sceneMemberID="viewController">
+                <tableViewController storyboardIdentifier="SubTagTVC" id="Rhi-he-iTV" customClass="SubTagTVC" customModule="MusicForThought" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" id="HD1-F0-O5W">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
