added title for subtag tvc and added a test to make sure the search term for sub tag vm is correct

--- a/MusicForThought/Base.lproj/Main.storyboard
+++ b/MusicForThought/Base.lproj/Main.storyboard
@@ -25,6 +25,9 @@
                                     <rect key="frame" x="0.0" y="0.0" width="375" height="43"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                 </tableViewCellContentView>
+                                <connections>
+                                    <segue destination="Rhi-he-iTV" kind="show" identifier="SubTagSegue" id="gaH-0I-HXK"/>
+                                </connections>
                             </tableViewCell>
                         </prototypes>
                         <connections>
