--- a/MusicForThought/Base.lproj/Main.storyboard
+++ b/MusicForThought/Base.lproj/Main.storyboard
@@ -6,6 +6,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11757"/>
+        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -76,29 +77,44 @@
         <scene sceneID="TlM-Jo-P1i">
             <objects>
                 <collectionViewController id="PTN-ub-hDu" customClass="SongCVC" customModule="MusicForThought" customModuleProvider="target" sceneMemberID="viewController">
-                    <collectionView key="view" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" misplaced="YES" dataMode="prototypes" id="P8t-dA-T7I">
+                    <collectionView key="view" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" id="P8t-dA-T7I">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                        <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="4e8-JJ-LKa">
-                            <size key="itemSize" width="50" height="50"/>
+                        <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="5" minimumInteritemSpacing="5" id="4e8-JJ-LKa">
+                            <size key="itemSize" width="100" height="100"/>
                             <size key="headerReferenceSize" width="0.0" height="0.0"/>
                             <size key="footerReferenceSize" width="0.0" height="0.0"/>
                             <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                         </collectionViewFlowLayout>
                         <cells>
-                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="SongCell" id="ZR2-Tc-MLF">
-                                <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="SongCell" id="ZR2-Tc-MLF" customClass="SongCell" customModule="MusicForThought" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="0.0" width="100" height="100"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                                    <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="100" height="100"/>
                                     <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Aq0-3e-rfY">
+                                            <rect key="frame" x="12" y="22" width="76" height="56"/>
+                                            <constraints>
+                                                <constraint firstAttribute="width" secondItem="Aq0-3e-rfY" secondAttribute="height" multiplier="21:17" constant="6.1764705882352899" id="fYf-ah-UHD"/>
+                                            </constraints>
+                                        </imageView>
+                                    </subviews>
                                 </view>
+                                <constraints>
+                                    <constraint firstItem="Aq0-3e-rfY" firstAttribute="centerY" secondItem="ZR2-Tc-MLF" secondAttribute="centerY" id="gzP-3O-MkI"/>
+                                    <constraint firstItem="Aq0-3e-rfY" firstAttribute="width" secondItem="ZR2-Tc-MLF" secondAttribute="height" multiplier="21:25" constant="-8" id="rbJ-vT-ce0"/>
+                                    <constraint firstItem="Aq0-3e-rfY" firstAttribute="centerX" secondItem="ZR2-Tc-MLF" secondAttribute="centerX" id="tDT-Q3-8lD"/>
+                                </constraints>
+                                <connections>
+                                    <outlet property="image" destination="Aq0-3e-rfY" id="mNg-6a-OXB"/>
+                                </connections>
                             </collectionViewCell>
                         </cells>
                         <connections>
                             <outlet property="dataSource" destination="PTN-ub-hDu" id="PZO-OM-tcO"/>
-                            <outlet property="delegate" destination="PTN-ub-hDu" id="MoT-Bk-OfC"/>
                         </connections>
                     </collectionView>
                     <navigationItem key="navigationItem" id="fBd-xz-c5u">
@@ -117,7 +133,7 @@
                 </collectionViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="f0d-FG-mOC" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2641" y="38"/>
+            <point key="canvasLocation" x="2640.8000000000002" y="37.331334332833585"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="K1N-tj-TTR">
