description vm added

--- a/MusicForThought/Base.lproj/Main.storyboard
+++ b/MusicForThought/Base.lproj/Main.storyboard
@@ -76,8 +76,8 @@
         <!--Songs-->
         <scene sceneID="TlM-Jo-P1i">
             <objects>
-                <collectionViewController id="PTN-ub-hDu" customClass="SongCVC" customModule="MusicForThought" customModuleProvider="target" sceneMemberID="viewController">
-                    <collectionView key="view" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" id="P8t-dA-T7I">
+                <collectionViewController storyboardIdentifier="SongCVC" id="PTN-ub-hDu" customClass="SongCVC" customModule="MusicForThought" customModuleProvider="target" sceneMemberID="viewController">
+                    <collectionView key="view" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" misplaced="YES" dataMode="prototypes" id="P8t-dA-T7I">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
