initial vc changed

--- a/MusicForThought/Base.lproj/Main.storyboard
+++ b/MusicForThought/Base.lproj/Main.storyboard
@@ -7,6 +7,7 @@
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11757"/>
         <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -124,6 +125,63 @@
             </objects>
             <point key="canvasLocation" x="2612" y="38"/>
         </scene>
+        <!--View Controller-->
+        <scene sceneID="9D8-l2-Kjs">
+            <objects>
+                <viewController id="GRC-9e-JO1" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="kts-FW-utu"/>
+                        <viewControllerLayoutGuide type="bottom" id="c3m-N1-t8Q"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="ima-Oi-vZp">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Music For Thought" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Sfn-7Q-l0N">
+                                <rect key="frame" x="16" y="72" width="343" height="81"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="Sfn-7Q-l0N" secondAttribute="height" multiplier="343:81" id="HQv-f1-4Sn"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="25"/>
+                                <color key="textColor" red="0.0" green="0.0" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="CHMusic.png" translatesAutoresizingMaskIntoConstraints="NO" id="ho5-N8-bc2">
+                                <rect key="frame" x="42" y="219" width="291" height="228"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="ho5-N8-bc2" secondAttribute="height" multiplier="97:76" id="wqO-mX-A9X"/>
+                                </constraints>
+                            </imageView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="DC6-L8-WcP">
+                                <rect key="frame" x="77" y="604.5" width="221" height="54.5"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="DC6-L8-WcP" secondAttribute="height" multiplier="317:78" id="Q2I-hB-Xxa"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="26"/>
+                                <state key="normal" title="Explore Music Now"/>
+                                <connections>
+                                    <segue destination="VrW-Qb-pbQ" kind="show" identifier="EnterSegue" id="TYP-Dp-DWa"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="ho5-N8-bc2" firstAttribute="centerY" secondItem="ima-Oi-vZp" secondAttribute="centerY" id="4Qz-mS-7t3"/>
+                            <constraint firstItem="ho5-N8-bc2" firstAttribute="centerX" secondItem="ima-Oi-vZp" secondAttribute="centerX" id="6aA-ZR-tca"/>
+                            <constraint firstItem="ho5-N8-bc2" firstAttribute="width" secondItem="ima-Oi-vZp" secondAttribute="height" multiplier="291:667" id="Av8-cn-ozZ"/>
+                            <constraint firstAttribute="leadingMargin" secondItem="Sfn-7Q-l0N" secondAttribute="leading" id="FE6-UR-4ZV"/>
+                            <constraint firstItem="c3m-N1-t8Q" firstAttribute="top" secondItem="DC6-L8-WcP" secondAttribute="bottom" constant="8" symbolic="YES" id="Fz3-oL-wpl"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="Sfn-7Q-l0N" secondAttribute="trailing" id="GVS-V9-EIx"/>
+                            <constraint firstItem="Sfn-7Q-l0N" firstAttribute="top" secondItem="kts-FW-utu" secondAttribute="bottom" constant="8" symbolic="YES" id="cX4-v4-U6b"/>
+                            <constraint firstItem="DC6-L8-WcP" firstAttribute="centerX" secondItem="ima-Oi-vZp" secondAttribute="centerX" id="fu7-wW-0w5"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" id="0J7-ot-MKT"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="uhY-8d-W31" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-167" y="63"/>
+        </scene>
         <!--DescriptionTVC-->
         <scene sceneID="2um-as-UN6">
             <objects>
@@ -163,12 +221,15 @@
                     </navigationBar>
                     <nil name="viewControllers"/>
                     <connections>
-                        <segue destination="VrW-Qb-pbQ" kind="relationship" relationship="rootViewController" id="vdS-H3-ffT"/>
+                        <segue destination="GRC-9e-JO1" kind="relationship" relationship="rootViewController" id="6li-2E-lpx"/>
                     </connections>
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="0A6-YC-eFZ" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-178.40000000000001" y="53.523238380809602"/>
+            <point key="canvasLocation" x="-1158" y="63"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="CHMusic.png" width="250" height="202"/>
+    </resources>
 </document>
