--- a/MusicForThought/Base.lproj/Main.storyboard
+++ b/MusicForThought/Base.lproj/Main.storyboard
@@ -78,7 +78,7 @@
         <scene sceneID="TlM-Jo-P1i">
             <objects>
                 <collectionViewController storyboardIdentifier="SongCVC" id="PTN-ub-hDu" customClass="SongCVC" customModule="MusicForThought" customModuleProvider="target" sceneMemberID="viewController">
-                    <collectionView key="view" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" misplaced="YES" dataMode="prototypes" id="P8t-dA-T7I">
+                    <collectionView key="view" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" id="P8t-dA-T7I">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -97,20 +97,28 @@
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Aq0-3e-rfY">
-                                            <rect key="frame" x="12" y="22" width="76" height="56"/>
+                                            <rect key="frame" x="12" y="8" width="76" height="62"/>
                                             <constraints>
-                                                <constraint firstAttribute="width" secondItem="Aq0-3e-rfY" secondAttribute="height" multiplier="21:17" constant="6.1764705882352899" id="fYf-ah-UHD"/>
+                                                <constraint firstAttribute="width" secondItem="Aq0-3e-rfY" secondAttribute="height" multiplier="21:17" id="fYf-ah-UHD"/>
                                             </constraints>
                                         </imageView>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gWM-Ot-7b9">
+                                            <rect key="frame" x="8" y="71" width="80" height="21"/>
+                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
                                     </subviews>
                                 </view>
                                 <constraints>
-                                    <constraint firstItem="Aq0-3e-rfY" firstAttribute="centerY" secondItem="ZR2-Tc-MLF" secondAttribute="centerY" id="gzP-3O-MkI"/>
+                                    <constraint firstItem="Aq0-3e-rfY" firstAttribute="centerY" secondItem="ZR2-Tc-MLF" secondAttribute="centerY" constant="-11" id="gzP-3O-MkI"/>
                                     <constraint firstItem="Aq0-3e-rfY" firstAttribute="width" secondItem="ZR2-Tc-MLF" secondAttribute="height" multiplier="21:25" constant="-8" id="rbJ-vT-ce0"/>
                                     <constraint firstItem="Aq0-3e-rfY" firstAttribute="centerX" secondItem="ZR2-Tc-MLF" secondAttribute="centerX" id="tDT-Q3-8lD"/>
                                 </constraints>
                                 <connections>
                                     <outlet property="image" destination="Aq0-3e-rfY" id="mNg-6a-OXB"/>
+                                    <outlet property="songTitleLabel" destination="gWM-Ot-7b9" id="0cm-56-kiT"/>
                                     <segue destination="8JU-V9-KrH" kind="show" identifier="DescriptionSegue" id="qi0-cR-lGx"/>
                                 </connections>
                             </collectionViewCell>
@@ -123,7 +131,7 @@
                 </collectionViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="f0d-FG-mOC" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2612" y="38"/>
+            <point key="canvasLocation" x="2612" y="37.331334332833585"/>
         </scene>
         <!--View Controller-->
         <scene sceneID="9D8-l2-Kjs">
