--- a/MusicForThought/Base.lproj/Main.storyboard
+++ b/MusicForThought/Base.lproj/Main.storyboard
@@ -119,7 +119,6 @@
                                 <connections>
                                     <outlet property="image" destination="Aq0-3e-rfY" id="mNg-6a-OXB"/>
                                     <outlet property="songTitleLabel" destination="gWM-Ot-7b9" id="0cm-56-kiT"/>
-                                    <segue destination="8JU-V9-KrH" kind="show" identifier="DescriptionSegue" id="qi0-cR-lGx"/>
                                 </connections>
                             </collectionViewCell>
                         </cells>
@@ -128,6 +127,9 @@
                         </connections>
                     </collectionView>
                     <navigationItem key="navigationItem" title="Songs" id="fBd-xz-c5u"/>
+                    <connections>
+                        <segue destination="8JU-V9-KrH" kind="show" identifier="DescriptionSegue" id="vhM-bg-3Ru"/>
+                    </connections>
                 </collectionViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="f0d-FG-mOC" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
